--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import '@fontsource/dancing-script'; 
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Sora:wght@100..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Sora:wght@100..800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import '@fontsource/dancing-script';
 
 :root {
   --background: #ffffff;
